fix: fix docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
-pandoc:
-  image: vbatts/pandoc
-  volumes:
-    - ./application:/application
+services:
+    pandoc:
+        image: vbatts/pandoc
+        volumes:
+            - ./application:/application
